# novel-kit

./: .gitignore  README.md  build-config.json  build_novelkit.py  pyproject.toml
scripts/bash/: chapter-manager.sh  character-manager.sh  constitution-manager.sh  faction-manager.sh  location-manager.sh  plot-manager.sh  setup-manager.sh  writer-manager.sh
src/novel_kit_cli/: __init__.py
