[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "novel-kit-cli"
version = "0.0.3"
description = "NovelKit CLI - AI-Assisted Novel Writing Toolkit"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "readchar>=3.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
novel-kit = "novel_kit_cli:main"

[tool.hatch.build.targets.wheel]
# 包目录使用下划线命名（Python 包名规范）
packages = ["src/novel_kit_cli"]

[tool.hatch.build.targets.sdist]
# 源码分发包只需要包含 CLI 代码
# commands、templates、scripts、memory 是用于构建 NovelKit 发布包的源文件
# CLI 不需要这些文件，它从构建好的发布包或 GitHub Release 下载
include = [
    "/src",
    "/README.md",
]
